# aida-github-plugin

./: .frontmatter-schema.json  .gitignore  .markdownlint.json  .yamllint.yml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: aida-config.json  marketplace.json  plugin.json
.github/issues/in-progress/: issue-2.md  issue-3.md
.github/workflows/: ci.yml
agents/aida-github-plugin/: aida-github-plugin.md
agents/aida-github-plugin/knowledge/: index.md
agents/github-expert/: github-expert.md
agents/github-expert/knowledge/: decisions.md  guardrails.md  index.md  operations.md
docs/: github-expert-agent-plan.md  plugin-spec.md
docs/architecture/adr/: 001-python-scripts-for-deterministic-execution.md  002-github-dispatcher-pattern.md  003-config-driven-workflows.md  004-agent-teaches-skill-does.md  005-eighty-twenty-knowledge-model.md  006-aida-virtual-environment-for-scripts.md  007-three-tier-progressive-loading.md  008-rich-terminal-formatting.md  README.md
scripts/: __init__.py  gh_api.py  gh_label_sync.py  gh_pr_body.py  gh_project.py  gh_query.py  gh_release.py
scripts/data/: standard_labels.json
scripts/templates/: issue_bug.md.j2  issue_default.md.j2  pr_bugfix.md.j2  pr_default.md.j2
scripts/utils/: __init__.py  cli.py  errors.py  output.py  style.py
skills/github/: SKILL.md
tests/: conftest.py  test_plugin_structure.py
tests/test_scripts/: conftest.py  test_cli.py  test_gh_api.py  test_gh_label_sync.py  test_gh_pr_body.py  test_gh_project.py  test_gh_query.py  test_gh_release.py  test_utils.py
(+20 files in other folders)
