[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aida-github-plugin"
version = "0.1.0"
description = "AIDA plugin with agents and skills for GitHub operations including CI/CD, releases, and repository management"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11"
authors = [
    { name = "oakensoul", email = "github@oakensoul.com" },
]
keywords = ["github", "devops", "ci-cd", "automation", "releases"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6.0",
    "jinja2>=3.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
